...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_no_result_grey_24dp" />

    <TextView
        android:id="@id/tVEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:gravity="center"
        android:text="@string/no_results"
        android:textAppearance="?android:attr/textAppearanceMedium"
...
