...
    android:paddingStart="@dimen/default_margin_medium"
    android:paddingTop="@dimen/default_margin_content"
    android:paddingEnd="@dimen/default_margin_medium"
    android:paddingBottom="@dimen/default_margin_content">

    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="5"
        android:textAlignment="textStart"
        android:textColor="@color/dark"
...
