<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menuActionAttachFile"
        android:icon="@drawable/ic_attach_file_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2000"
        android:title="@string/attach_file"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menuActionSend"
        android:icon="@drawable/ic_send_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2001"
        android:title="@string/send"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuActionIncludePubKey"
        android:icon="@drawable/ic_key_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2002"
        android:title="@string/include_public_key"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionSwitchType"
        android:icon="@drawable/ic_switch_white_24dp"
        android:orderInCategory="100"
        android:title="@string/switch_to_standard_email"
        app:showAsAction="ifRoom" />
</menu>
